# FireworksStudio

./: CMakeLists.txt  README.md
shaders/: particle.frag  particle.vert  trail.vert
src/: CMakeLists.txt  main.cpp
src/core/: Application.cpp  Application.h  CMakeLists.txt  InputRouter.cpp  InputRouter.h  OrbitalCameraController.cpp  OrbitalCameraController.h  Window.cpp  Window.h
src/editor/: CMakeLists.txt  EditorContext.cpp  EditorContext.h
src/fireworks/: CMakeLists.txt  FireworkInstance.cpp  FireworkInstance.h  FireworkTemplate.h  Particle.h  ParticleSystem.cpp  ParticleSystem.h  ShapeRegistry.cpp  ShapeRegistry.h
src/fireworks/asset/: FireworkAsset.cpp  FireworkAsset.h
src/fireworks/editor/: TemplateRotationController.cpp  TemplateRotationController.h
src/fireworks/instance/: BranchInstance.cpp  BranchInstance.h  FireworkInstance.cpp  FireworkInstance.h  InstanceManager.cpp  InstanceManager.h
src/fireworks/particle/: Particle.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticlePool.cpp  ParticlePool.h
src/fireworks/shapes/: BuiltinShapes.h  Shape.h  ShapeRegistry.cpp  ShapeRegistry.h
src/fireworks/simulation/: BranchGenerator.cpp  BranchGenerator.h  BranchLayoutGenerator.cpp  BranchLayoutGenerator.h  ColorSchemeEvaluator.cpp  ColorSchemeEvaluator.h  ParticlePhysics.cpp  ParticlePhysics.h
src/fireworks/smoke/: SmokePuff.h  SmokePuffPool.cpp  SmokePuffPool.h
src/fireworks/template/: BranchDescriptor.h  BranchLayout.h  ColorScheme.h  FireworkTemplate.cpp  FireworkTemplate.h  GeneratedBranch.h  PhysicsProfile.h  TemplateLibrary.cpp  TemplateLibrary.h
src/rendering/: CMakeLists.txt  Camera.cpp  Camera.h  ParticleRenderer.cpp  ParticleRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TrailRenderer.cpp  TrailRenderer.h
src/scene/: CMakeLists.txt  Scene.cpp  Scene.h  ScenePlacementController.cpp  ScenePlacementController.h  Timeline.cpp  Timeline.h
src/serialization/: CMakeLists.txt  FireworkSerialization.cpp  FireworkSerialization.h
src/ui/: CMakeLists.txt  EditorMode.cpp  EditorMode.h  UIManager.cpp  UIManager.h
src/ui/panels/: IPanel.h  TemplatePropertyPanel.cpp  TemplatePropertyPanel.h
src/ui/panels/scene_editor/: FireworkListPanel.cpp  FireworkListPanel.h  SceneViewPanel.cpp  SceneViewPanel.h  TimelinePanel.cpp  TimelinePanel.h
src/ui/panels/template_editor/: BranchEditorPanel.cpp  BranchEditorPanel.h  ColorSchemePanel.cpp  ColorSchemePanel.h  LayoutEditorPanel.cpp  LayoutEditorPanel.h  PhysicsEditorPanel.cpp  PhysicsEditorPanel.h  PreviewPanel.cpp  PreviewPanel.h  TemplateLibraryPanel.cpp  TemplateLibraryPanel.h  TemplatePropertiesPanel.cpp  TemplatePropertiesPanel.h
src/ui/subsystems/: FileController.cpp  FileController.h  ImGuiLayer.cpp  ImGuiLayer.h  MenuBar.cpp  MenuBar.h  Panels.cpp  Panels.h
src/ui/widgets/: ColorPicker.cpp  ColorPicker.h  FileDialogModal.cpp  FileDialogModal.h  TimelineScrubber.cpp  TimelineScrubber.h
